--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.5.1",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.29.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.6.1",
